@@ -1,8 +1,6 @@
 package com.phenikaa.thesis.thesis.service;
 
-import com.phenikaa.thesis.batch.entity.ThesisBatch;
 import com.phenikaa.thesis.batch.entity.enums.BatchStatus;
-import com.phenikaa.thesis.common.exception.BusinessException;
 import com.phenikaa.thesis.notification.entity.enums.NotificationType;
 import com.phenikaa.thesis.notification.service.NotificationService;
 import com.phenikaa.thesis.thesis.dto.OutlineResponse;
@@ -10,22 +8,21 @@ import com.phenikaa.thesis.thesis.entity.Outline;
 import com.phenikaa.thesis.thesis.entity.Thesis;
 import com.phenikaa.thesis.thesis.entity.enums.OutlineStatus;
 import com.phenikaa.thesis.thesis.entity.enums.ThesisStatus;
+import com.phenikaa.thesis.thesis.mapper.OutlineMapper;
 import com.phenikaa.thesis.thesis.repository.OutlineRepository;
 import com.phenikaa.thesis.thesis.repository.ThesisRepository;
+import com.phenikaa.thesis.thesis.util.OutlineFileStorage;
+import com.phenikaa.thesis.thesis.validator.OutlineValidator;
+import com.phenikaa.thesis.audit.annotation.Auditable;
+import com.phenikaa.thesis.common.exception.BusinessException;
 import com.phenikaa.thesis.user.entity.User;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.OffsetDateTime;
 import java.util.List;
-import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -34,80 +31,33 @@ public class OutlineServiceImpl implements OutlineService {
     private final OutlineRepository outlineRepo;
     private final ThesisRepository thesisRepo;
     private final NotificationService notificationService;
-
-    private static final String UPLOAD_DIR = "uploads/outlines";
+    private final OutlineMapper outlineMapper;
+    private final OutlineValidator outlineValidator;
+    private final OutlineFileStorage fileStorage;
 
     @Override
     @Transactional
+    @Auditable(action = "SUBMIT_OUTLINE", entityType = "Outline")
     public OutlineResponse submitOutline(User user, MultipartFile file) {
-        if (user.getStudent() == null)
-            throw new BusinessException("Chỉ sinh viên mới có thể nộp đề cương.");
+        outlineValidator.validateStudent(user);
 
-        // Find active thesis
-        Thesis thesis = thesisRepo.findByStudentIdAndBatchStatus(
-                user.getStudent().getId(), BatchStatus.ACTIVE)
-                .stream().findFirst()
-                .orElseThrow(() -> new BusinessException("Bạn chưa tham gia đợt đồ án nào đang hoạt động."));
+        Thesis thesis = findActiveThesis(user);
+        outlineValidator.validateThesisStatus(thesis);
+        outlineValidator.validateOutlinePeriod(thesis.getBatch());
+        outlineValidator.validateFile(file);
 
-        // Validate thesis status
-        if (thesis.getStatus() != ThesisStatus.TOPIC_ASSIGNED 
-                && thesis.getStatus() != ThesisStatus.OUTLINE_REJECTED) {
-            throw new BusinessException("Bạn cần được phân công đề tài trước khi nộp đề cương. Trạng thái hiện tại: " + thesis.getStatus());
-        }
+        int nextVersion = resolveNextVersion(thesis);
+        String savedPath = fileStorage.save(file, thesis.getId(), nextVersion);
 
-        // Validate outline period
-        ThesisBatch batch = thesis.getBatch();
-        OffsetDateTime now = OffsetDateTime.now();
-        if (now.isBefore(batch.getOutlineStart()))
-            throw new BusinessException("Chưa đến thời gian nộp đề cương. Bắt đầu từ: " + batch.getOutlineStart());
-        if (now.isAfter(batch.getOutlineEnd()))
-            throw new BusinessException("Đã quá hạn nộp đề cương. Hạn cuối: " + batch.getOutlineEnd());
-
-        // Validate file
-        if (file == null || file.isEmpty())
-            throw new BusinessException("Vui lòng chọn file đề cương để upload.");
-
-        String originalName = file.getOriginalFilename();
-        if (originalName == null || !originalName.toLowerCase().endsWith(".pdf"))
-            throw new BusinessException("Chỉ chấp nhận file PDF.");
-
-        // Determine version
-        List<Outline> existingOutlines = outlineRepo.findByThesisIdOrderByVersionDesc(thesis.getId());
-        int nextVersion = existingOutlines.isEmpty() ? 1 : existingOutlines.get(0).getVersion() + 1;
-
-        // Save file
-        String savedPath = saveFile(file, thesis.getId(), nextVersion);
-
-        // Create outline record
-        Outline outline = Outline.builder()
-                .thesis(thesis)
-                .version(nextVersion)
-                .filePath(savedPath)
-                .fileName(originalName)
-                .fileSize(file.getSize())
-                .status(OutlineStatus.SUBMITTED)
-                .submittedAt(now)
-                .build();
+        Outline outline = buildOutline(thesis, file, savedPath, nextVersion);
         outlineRepo.save(outline);
 
-        // Update thesis status
         thesis.setStatus(ThesisStatus.OUTLINE_SUBMITTED);
         thesisRepo.save(thesis);
 
-        // Notify advisor
-        if (thesis.getAdvisor() != null && thesis.getAdvisor().getUser() != null) {
-            String studentName = fullName(user);
-            String topicTitle = thesis.getTopic() != null ? thesis.getTopic().getTitle() : "N/A";
-            notificationService.sendNotification(
-                    thesis.getAdvisor().getUser(),
-                    NotificationType.OUTLINE_REVIEWED,
-                    "Sinh viên nộp đề cương",
-                    "Sinh viên " + studentName + " (" + user.getStudent().getStudentCode()
-                            + ") đã nộp đề cương v" + nextVersion + " cho đề tài \"" + topicTitle + "\".",
-                    "OUTLINE", outline.getId());
-        }
+        notifyAdvisor(thesis, user, nextVersion);
 
-        return toResponse(outline);
+        return outlineMapper.toResponse(outline);
     }
 
     @Override
@@ -121,42 +71,47 @@ public class OutlineServiceImpl implements OutlineService {
         if (thesis == null) return List.of();
 
         return outlineRepo.findByThesisIdOrderByVersionDesc(thesis.getId())
-                .stream().map(this::toResponse).collect(Collectors.toList());
+                .stream().map(outlineMapper::toResponse).toList();
     }
 
-    // ── Helpers ──
+    // ── Private helpers ──
 
-    private String saveFile(MultipartFile file, UUID thesisId, int version) {
-        try {
-            Path uploadPath = Paths.get(UPLOAD_DIR, thesisId.toString());
-            Files.createDirectories(uploadPath);
-            String fileName = "outline_v" + version + "_" + System.currentTimeMillis() + ".pdf";
-            Path filePath = uploadPath.resolve(fileName);
-            file.transferTo(filePath.toFile());
-            return filePath.toString();
-        } catch (IOException e) {
-            throw new BusinessException("Lỗi khi lưu file đề cương: " + e.getMessage());
-        }
+    private Thesis findActiveThesis(User user) {
+        return thesisRepo.findByStudentIdAndBatchStatus(
+                user.getStudent().getId(), BatchStatus.ACTIVE)
+                .stream().findFirst()
+                .orElseThrow(() -> new BusinessException("Bạn chưa tham gia đợt đồ án nào đang hoạt động."));
     }
 
-    private OutlineResponse toResponse(Outline outline) {
-        OutlineResponse res = new OutlineResponse();
-        res.setId(outline.getId());
-        res.setThesisId(outline.getThesis().getId());
-        res.setVersion(outline.getVersion());
-        res.setFileName(outline.getFileName());
-        res.setFileSize(outline.getFileSize());
-        res.setStatus(outline.getStatus());
-        res.setReviewerComment(outline.getReviewerComment());
-        res.setReviewedAt(outline.getReviewedAt());
-        res.setSubmittedAt(outline.getSubmittedAt());
-        if (outline.getReviewedBy() != null) {
-            res.setReviewerName(fullName(outline.getReviewedBy().getUser()));
-        }
-        return res;
+    private int resolveNextVersion(Thesis thesis) {
+        List<Outline> existing = outlineRepo.findByThesisIdOrderByVersionDesc(thesis.getId());
+        return existing.isEmpty() ? 1 : existing.get(0).getVersion() + 1;
     }
 
-    private String fullName(User u) {
-        return (u.getLastName() + " " + u.getFirstName()).trim();
+    private Outline buildOutline(Thesis thesis, MultipartFile file, String savedPath, int version) {
+        return Outline.builder()
+                .thesis(thesis)
+                .version(version)
+                .filePath(savedPath)
+                .fileName(file.getOriginalFilename())
+                .fileSize(file.getSize())
+                .status(OutlineStatus.SUBMITTED)
+                .submittedAt(OffsetDateTime.now())
+                .build();
+    }
+
+    private void notifyAdvisor(Thesis thesis, User student, int version) {
+        if (thesis.getAdvisor() == null || thesis.getAdvisor().getUser() == null) return;
+
+        String studentName = (student.getLastName() + " " + student.getFirstName()).trim();
+        String topicTitle = thesis.getTopic() != null ? thesis.getTopic().getTitle() : "N/A";
+
+        notificationService.sendNotification(
+                thesis.getAdvisor().getUser(),
+                NotificationType.OUTLINE_REVIEWED,
+                "Sinh viên nộp đề cương",
+                "Sinh viên " + studentName + " (" + student.getStudent().getStudentCode()
+                        + ") đã nộp đề cương v" + version + " cho đề tài \"" + topicTitle + "\".",
+                "OUTLINE", thesis.getId());
     }
 }
